--- a/Authors.txt
+++ b/Authors.txt
@@ -1,3 +1,3 @@
-NIA1, Surname1, Name1
-NIA2, Surname2, Name2
-NIA3, Surname3, Name3
+100429021, Casais Mezquida, Luis Daniel
+100428997, Arnaiz Tierraseca, Ignacio
+100429063, Del Pino Vega, Juan
